--- a/namur.html
+++ b/namur.html
@@ -26,7 +26,7 @@ The material also includes some instructions (textual files)
 ## Description of the source 
 
 
- 1. Software product line engineering, Variability modeling and management: An overview 
+### 1. Software product line engineering, Variability modeling and management: An overview 
 
  * Goal of this course: variability / SPLs everywhere ; variability techniques and engineering ; running project: variability of a car configurator 
  *	Examples of variability intensive systems 
@@ -37,7 +37,7 @@ Conclusion= variability intensive systems (SPLs) are widespread ; managing varia
 
 No exercice
 
- 2. Software product line engineering: a generic framework 
+### 2. Software product line engineering: a generic framework 
  
 (Basically, we revisit 1.3 (principles), the framework of K. Pohl + generative techniques)
 
@@ -51,7 +51,7 @@ Conclusion= SPL engineering changes the way software should be developed ; (bis)
 
 Exercice 1: revisiting your RE/SE knowledge: present (known) techniques in this framework (*known* means notions you have learned during your cursus) 
 
- 3. Modeling and managing variability
+### 3. Modeling and managing variability
 
 (aka Using feature model, the defacto standard)
   
@@ -69,7 +69,7 @@ Exercices (goal : modeling with feature models ; feature modeling in practice)
  *	Exercice 3: take an existing car configurator and try to identify configuration options (Ebrahim's patterns)
  *	Exercice 4: use automtated techniques for reverse engineer configuration options from GUIs (use the same previous example)
   
- 4. Feature models: automated techniques, language and tool support
+### 4. Feature models: automated techniques, language and tool support
 
  *	Automated techniques
  *	Management support
@@ -85,7 +85,7 @@ Exercices (goal : see operations in practice using a dedicated language)
  *	Exercice 8: domain analysis of car configurator (compator of cars, VariCell (or revisit the merge operator), e.g.: http://www.opel.ie/vehicles/opel_range/cars/agila/features-specs/equipment.html#series=0HFE) 
 
 
- 5. Variability implementation 
+### 5. Variability implementation 
 
  *	Overview of implementation techniques (revisit course 1)
  *	Conditional compilation
