--- a/namur.html
+++ b/namur.html
@@ -23,7 +23,10 @@ Essentially a set of slides used for courses but also for lab sessions
 The material also includes some instructions (textual files)
 
 
-## Description of the source 
+## Description of the course
+
+Below is a "plan" of the five courses.
+For each course there is a take away message ("conclusion") and some exercices
 
 
 ### 1. Software product line engineering, Variability modeling and management: An overview 
@@ -33,7 +36,7 @@ The material also includes some instructions (textual files)
  *	Principles (overview: mass customization / reuse, variability in time / space, domain vs application engineering, single product vs family of products)
  *	Overview of implementation techniques
 
-Conclusion= variability intensive systems (SPLs) are widespread ; managing variability is a key issue
+***Conclusion= variability intensive systems (SPLs) are widespread ; managing variability is a key issue***
 
 No exercice
 
