Empty take aways

--- a/namur.html
+++ b/namur.html
@@ -36,7 +36,7 @@ For each course there is a take away message ("conclusion") and some exercices
  *	Principles (overview: mass customization / reuse, variability in time / space, domain vs application engineering, single product vs family of products)
  *	Overview of implementation techniques
 
-***Conclusion= variability intensive systems (SPLs) are widespread ; managing variability is a key issue***
+*Conclusion= variability intensive systems (SPLs) are widespread ; managing variability is a key issue*
 
 No exercice
 
@@ -50,7 +50,7 @@ No exercice
  *	Generative, model-based approaches
 
 
-Conclusion= SPL engineering changes the way software should be developed ; (bis) variability management and automated techniques are a key issue 
+*Conclusion= SPL engineering changes the way software should be developed ; (bis) variability management and automated techniques are a key issue*
 
 Exercice 1: revisiting your RE/SE knowledge: present (known) techniques in this framework (*known* means notions you have learned during your cursus) 
 
@@ -64,7 +64,7 @@ Exercice 1: revisiting your RE/SE knowledge: present (known) techniques in this 
  *	overview of automated techniques
  *	feature model in the SPL framework (aka why a feature model is of interest: not necessary a documentation artefact, safe composition, configurators, product derivation)
 
-Conclusion= feature models: de factor standard for modeling and managing variability (precise semantics, automated support, tools, useful in many variability management scenarios)
+*Conclusion= feature models: de factor standard for modeling and managing variability (precise semantics, automated support, tools, useful in many variability management scenarios)*
 
 Exercices (goal : modeling with feature models ; feature modeling in practice)
 
@@ -78,7 +78,7 @@ Exercices (goal : modeling with feature models ; feature modeling in practice)
  *	Management support
  *	Views, FCW
 
-Conclusion= automated, tool supported techniques have been developed for different purposes (extracting properties and reasoning about models, enhancing configuration process, etc.)
+*Conclusion= automated, tool supported techniques have been developed for different purposes (extracting properties and reasoning about models, enhancing configuration process, etc.)*
 
 Exercices (goal : see operations in practice using a dedicated language)
 
@@ -96,7 +96,7 @@ Exercices (goal : see operations in practice using a dedicated language)
  *	Generative techniques (DSLs)
  *	Model-based product derivation
 
-Conclusion= realizing variability is a rich field that involves basic mechanisms (conditional compilation) or more sophisiticated technology ; applicable to many artefacts (code, documentation, graphical interfaces)
+*Conclusion= realizing variability is a rich field that involves basic mechanisms (conditional compilation) or more sophisiticated technology ; applicable to many artefacts (code, documentation, graphical interfaces)*
 
 Project = the goal is to realize an end-to-end generative process to derive specific configurators from a feature model (e.g., like the one that has been reverse engineered)
 
