--- a/namur.html
+++ b/namur.html
@@ -11,6 +11,8 @@ University of Namur in 2011 for MSc students
 
 10 hours of courses (5 * 2) + 20 hours of exercices (10 * 2)
 
+Instructors: Mathieu Acher and Patrick Heymans
+
 ## Location of the material
 
 [NamurSPLCourse
