precisions and typos

--- a/rennes2015-MDE.html
+++ b/rennes2015-MDE.html
@@ -9,7 +9,7 @@ title: Repository of teaching material for product line and variability
 
 University of Rennes 1 in 2015 for MSc students (software engineering: M2GL and M2GLA; software management: MIAGE)
 
-Instructors: Mathieu Acher and Jean-Marc J&eacute;z&eacute;quel
+Instructors: Mathieu Acher, Jean-Marc J&eacute;z&eacute;quel, and Thomas Degueule
 
 ## Location of the material
 
@@ -18,8 +18,9 @@ Instructors: Mathieu Acher and Jean-Marc J&eacute;z&eacute;quel
 
 ## Description of the material
 
-A set of slides used for courses.
+A set of slides used for courses is available.
 Lab sessions and project instructions are also available.
+Some instructions are in French, please write an email if you need a translation. 
 
 
 ## Description of the course
