--- a/rennes2015-MRI.html
+++ b/rennes2015-MRI.html
@@ -18,9 +18,11 @@ Instructors: Mathieu Acher and Jean-Marc J&eacute;z&eacute;quel
 
 ## Description of the material
 
-A set of slides used for courses
-No lab sessions but some instructions for quizz, homework (including
-open problems) are available 
+A set of slides used for courses.
+
+No lab sessions but some instructions for quizz and JHipster homework (including
+open problems) are available.
+Content is in English. 
 
 
 ## Description of the course
