--- a/montpellier2016.html
+++ b/montpellier2016.html
@@ -16,7 +16,7 @@ More details here: http://www.lirmm.fr/users/utilisateurs-lirmm/marianne-huchard
 
 We put here the material related to configuration, variability, reuse, and software product line engineering.
 
-Instructor: Jessie Carbonnel, Mathieu Acher
+Instructors: Jessie Carbonnel, Mathieu Acher
 
 ## Location of the material
 
@@ -31,7 +31,7 @@ Lab sessions include:
  * exercices on [JHipster](https://jhipster.github.io/)
 
 Content is mainly in English, but some may be in French.
-Please contact instructors if you need some translations. 
+Please contact instructors if you need some translations.
 
 ## Description of the course
 
