--- a/montpellier2016.html
+++ b/montpellier2016.html
@@ -29,6 +29,7 @@ A set of slides used for courses.
 Lab sessions include:
  * exercices on feature modeling
  * exercices on [JHipster](https://jhipster.github.io/)
+ * exercices on model transformations and metamodeling (the goal is to transform a feature model into a graphical visualisation)
 
 Content is mainly in English, but some may be in French.
 Please contact instructors if you need some translations.
