edit on Montpellier

--- a/montpellier2015.html
+++ b/montpellier2015.html
@@ -12,7 +12,7 @@ As part of a course on "Software evolution and re-engineering" at
 University of Montpellier in 2015 for MSc students.
 Most of them are following a software engineering cursus. There is also an audience with an interest in research.
 Several (external) instructors are involved to present specific topics: refactoring, metamodeling, reverse engineering, etc.
-More details here: http://www.lirmm.fr/users/utilisateurs-lirmm/marianne-huchard/enseignement/hmin306
+More details [here](http://www.lirmm.fr/users/utilisateurs-lirmm/marianne-huchard/enseignement/hmin306).
 
 We put here the material related to configuration, variability, reuse, and software product line engineering.
 
@@ -38,7 +38,7 @@ Course content is in English, lab instructions in French.
 The course starts with a gentle introduction of software product lines (what and where they are, terminology and definition, SPLE process, etc.)
 We continue with feature modeling (syntacs and semantics).
 We then consider the relationship between feature model, product comparison matrix (PCM).
-Finally we explore scenarios for extracting feature models or PCMs from existing artefacts. 
+Finally we explore scenarios for extracting feature models or PCMs from existing artefacts.
 
 
 {% endcapture %}
