--- a/montpellier2016.html
+++ b/montpellier2016.html
@@ -12,7 +12,7 @@ As part of a course on "Software evolution and re-engineering" at
 University of Montpellier in 2016 for MSc students.
 Most of them are following a software engineering cursus. There is also an audience with an interest in research.
 Several (external) instructors are involved to present specific topics: refactoring, metamodeling, reverse engineering, etc.
-More details here: http://www.lirmm.fr/users/utilisateurs-lirmm/marianne-huchard/enseignement/hmin306
+More details [here](http://www.lirmm.fr/users/utilisateurs-lirmm/marianne-huchard/enseignement/hmin306).
 
 We put here the material related to configuration, variability, reuse, and software product line engineering.
 
