--- a/montpellier2016.html
+++ b/montpellier2016.html
@@ -16,7 +16,7 @@ More details [here](http://www.lirmm.fr/users/utilisateurs-lirmm/marianne-huchar
 
 We put here the material related to configuration, variability, reuse, and software product line engineering.
 
-Instructors: Jessie Carbonnel, Mathieu Acher
+Instructor: Mathieu Acher
 
 ## Location of the material
 
@@ -29,9 +29,8 @@ A set of slides used for courses.
 Lab sessions include:
  * exercices on feature modeling
  * exercices on [JHipster](https://jhipster.github.io/)
- * exercices on model transformations and metamodeling (the goal is to transform a feature model into a graphical visualisation)
 
-Content is mainly in English, but some may be in French.
+Content is mainly in English, but lab instruction is in French.
 Please contact instructors if you need some translations.
 
 ## Description of the course
