--- a/montpellier2015.html
+++ b/montpellier2015.html
@@ -27,8 +27,8 @@ Instructor: Mathieu Acher
 
 A set of slides used for courses.
 Lab sessions include:
- * exercices on feature modeling
- * an exercice on [JHipster](https://jhipster.github.io/)
+ - exercices on feature modeling
+ - an exercice on [JHipster](https://jhipster.github.io/)
 
 Course content is in English, lab instructions in French.
 
