--- a/montpellier2016.html
+++ b/montpellier2016.html
@@ -27,8 +27,8 @@ Instructor: Mathieu Acher
 
 A set of slides used for courses.
 Lab sessions include:
- * exercices on feature modeling
- * exercices on [JHipster](https://jhipster.github.io/)
+ - exercices on feature modeling
+ - exercices on [JHipster](https://jhipster.github.io/)
 
 Content is mainly in English, but lab instruction is in French.
 Please contact instructors if you need some translations.
@@ -37,9 +37,9 @@ Please contact instructors if you need some translations.
 
 The course starts with a gentle introduction of software product lines (what and where they are, terminology and definition, SPLE process, etc.)
 Then we focus on feature modeling:
- * syntacs and semantics
- * feature model synthesis
- * feature model management (slicing, merging, etc.)
+ - syntacs and semantics
+ - feature model synthesis
+ - feature model management (slicing, merging, etc.)
 Finally we explore scenarios for reverse engineering or modeling variability from existing artefacts.
 
 
