--- a/rennes-testing2016.html
+++ b/rennes-testing2016.html
@@ -18,15 +18,10 @@ Instructor: Benoit Baudry
 
 ## Description of the material
 
-A set of slides used for courses.
+Slides specifically used for the course about software product line and testing 
 
 
 ## Description of the course
-
-
-
-The course starts with a gentle introduction of model-driven
-engineering.
 
 The product line material is used as part of a "Software Testing" course. It consists in:
 
@@ -40,9 +35,9 @@ The product line material is used as part of a "Software Testing" course. It con
 
   More details about the "Software testing" course are available here: 
 
-http://people.rennes.inria.fr/Benoit.Baudry/software-testing-2016-17/
+(http://people.rennes.inria.fr/Benoit.Baudry/software-testing-2016-17/)
 
-http://people.rennes.inria.fr/Benoit.Baudry/test-course/
+(http://people.rennes.inria.fr/Benoit.Baudry/test-course/)
 
 
 
